--- a/html-css/html-basics/html-basics.html
+++ b/html-css/html-basics/html-basics.html
@@ -6,7 +6,7 @@
     <!--users don't see what is inside head tag-->
     <title>HTML BASICS</title>
     <meta name="author" content="Yasser Alsilwadi">
-    <meta name="descriptop" content="html class">
+    <meta name="description" content="html class">
     <meta name="keywords" content="html css javascript tutorials">
     <meta charset="UTF-8">
 </head>
