pushed homework code

--- a/html-css/html-basics/html-activity.html
+++ b/html-css/html-basics/html-activity.html
@@ -1,10 +1,7 @@
-<!--document type-->
 <!DOCTYPE html>
-<!--document type-->
 <html>
 <head>
-    <!--users don't see what is inside head tag-->
-    <title>HTML BASICS</title>
+    <title>HTML Activity</title>
     <meta name="author" content="Yasser Alsilwadi">
     <meta name="activity" content="html class activity">
     <meta name="keywords" content="html css activity">
@@ -133,3 +130,4 @@
         <a href="https://tinyurl.com/26s9nfo9" target="_blank"><img src="https://tinyurl.com/26s9nfo9" alt="cat"></a>
     </section>
 </body>
+</html>
