--- a/html-css/homework/css-homework.html
+++ b/html-css/homework/css-homework.html
@@ -7,158 +7,77 @@
     <title>Css HomeWork</title>
 
     <style>
-        #t1-p {
-            color: red;
-            margin: auto;
-            padding: 10px;
-        }
-
-        section{
-            border: rgb(224, 224, 161);
-            border-width:5px; 
-            border-style:solid;
-        }
-
-        #t2-p{
-            font-size: 50px;
-            color: white;
-            text-shadow: rgb(129, 50, 63) 1px 1px 15px;
-        }
-
-        #t3-p {
-            color: white;
-            margin: auto;
-            padding: 10px;
-            background-color: blue;
-        }
-
-        #t4-p {
-            color: white;
-            margin: auto;
-            padding: 10px;
-            background-color: blue;
-            opacity: 0.5;
-        }
-
-        .lines-image {
-            background-image: url("https://freerangestock.com/sample/140409/abstract-colorful-geometric-background--abstract-background.jpg"); /* The image used */
-            background-color: #cccccc; /* Used if the image is unavailable */
-            height: 500px; /* You must set a specified height */
-            background-position: center; /* Center the image */
-            background-repeat: no-repeat; /* Do not repeat the image */
-            background-size: cover; /* Resize the background image to cover the entire container */
-        }
         h1{
-            background-color: rgb(177, 175, 175);
-            color: red;
-            text-align: center;
+            color: black;
+            background-color: red;
+            font-family: Arial, Helvetica, sans-serif;
+            margin: auto;
+            padding: 5px;
         }
         h2{
             color: red;
-            text-align: center;
-        }
-
-        #t5-p {
-            color: black;
-            background-color: rgb(172, 169, 169);
-            text-align: right;
-        }
-
-        .back-image {
-            background-image: url("https://tinyurl.com/2b5dayhp"); /* The image used */
-            background-color: #cccccc; /* Used if the image is unavailable */
-            height: 500px; /* You must set a specified height */
-            background-position: center; /* Center the image */
-            background-repeat: no-repeat; /* Do not repeat the image */
-            background-size: cover; /* Resize the background image to cover the entire container */
-        }
-
-        #t6-p{
-            mix-blend-mode:difference;
-            color:black;
-            text-align: center;
+            background-color: greenyellow;
+            font-family: Arial, Helvetica, sans-serif;
             margin: auto;
-            width: 640px;
-            padding: 175px;
-            font-size: 100px;
-            filter:invert(150%)
+            padding: 5px;
+        }
+        #p-t1{
+            color: aqua;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        #p-t2{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        #p-t3{
+            font-family: cursive, serif; 
+            color: gray;
         }
     </style>
 </head>
     <body>
-
-        <section>
-            <p id="t1-p">Color text and <span style="color: greenyellow;">another color</span>, and now back to the same. Oh, and here's a 
-                <span style="background-color: yellowgreen;">different background color</span> just in case you need it!</p>
-        </section>
         
-            
-        <br>
-        <hr>
-
-        <section>
-            <p id="t2-p">This text to demonstrates the text shadow effect.</p>
-        </section>
+        <h1>Sit Amet Volutpat</h1>
 
         <br>
-        <hr>
 
-        <section>
-            <div class="lines-image">
-                <p id="t3-p">This text has full background color.</p>
-            </div>
-        </section>
+        <h2>Euismod In Pellentesque Massa</h2>
 
         <br>
-        <hr>
 
-        <section>
-            <div class="lines-image">
-                <p id="t4-p">This text has full background color.</p>
-            </div>
-        </section>
+        <p id="p-t1">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+             ut labore et dolore magna aliqua. Molestie a iaculis at erat pellentesque adipiscing commodo elit. 
+             Venenatis tellus in metus vulputate eu scelerisque. Cursus metus aliquam eleifend mi in nulla. Justo 
+             nec ultrices dui sapien eget. Fermentum odio eu feugiat pretium nibh ipsum consequat nisl vel. Morbi 
+             tristique senectus et netus et malesuada. Aliquet sagittis id consectetur purus. Elit eget gravida cum 
+             sociis natoque penatibus. Sit amet aliquam id diam maecenas ultricies mi eget. Fusce ut placerat orci 
+             nulla pellentesque dignissim enim sit amet. Vel quam elementum pulvinar etiam non quam. Est lorem ipsum 
+             dolor sit amet consectetur adipiscing. Ullamcorper morbi tincidunt ornare massa eget egestas purus viverra. 
+             Id diam maecenas ultricies mi eget mauris. Eu non diam phasellus vestibulum lorem sed risus ultricies. 
+             Nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Aenean vel elit scelerisque 
+             mauris pellentesque pulvinar. Nullam ac tortor vitae purus faucibus ornare. Risus quis varius quam quisque id diam vel quam.
+        </p>
 
-        <br>
-        <hr>
+        <h2>Ut Eu Sem Integer Vitae</h2>
 
-        <section>
-                <ul style="color: blue;">
-                    <li>Menu
-                        <ol style="color: rgb(219, 200, 31);">
-                            <li>Sweets</li>
-                            <li>Baby</li>
-                            <li>Kitchen</li>
-                            <li>Furniture
-                                <ul style="color: blue;">
-                                    <li>Sofa</li>
-                                    <li>Chairs</li>
-                                </ul>
-                            </li>
-                        </ol>
-                    </li>
-                </ul>
-        </section>
+        <p id="p-t2">
+            <ul>
+                <li>id porta nibh venenatis cras</li>
+                <li>maecenas sed enim ut sem viverra aliquet eget</li>
+                <li>velit aliquet sagittis</li>
+            </ul>
+        </p>
+
+        <h2>Praesent Tristique Magna Sit Amet Purus Gravida</h2>
 
         <br>
-        <hr>
 
-        <section>
-            <h1>Test CSS Style Sheet</h1>
-            <h2>This is heading level 2</h2>
-            <div style="text-align: left;">
-                Lorem ipsum dolor sit amet, <span style="color: red;">consectetur adipiscing elit</span>, sed do eiusmod tempor incididunt ut <br>
-                labore et dolore <span style="background-color: yellow;">magna aliqua</span>. Ut enim ad minim veniam, <span style="color: red; background-color: yellow;">quis <br> nostrud exercitation</span> 
-                ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </div>
-            <p id="t5-p">This page is created with <span style="color: red;">HTML5/CSS3</span></p>
-        </section>
+        <a href="file:///C:/Users/yasse/VSCode/dev-course/html-css/homework/css-homework.html"><img src="https://placeimg.com/200/200/any" alt="img"></a>
 
+        <h3 style="font-size: 60px;">Id Leo In</h3>
 
-        <section>
-            <div class="back-image">
-                <p id="t6-p">"Meow" mean <br> "woof" in cat.</p>
-            </div>
-        </section>
+        <p id="p-t3"><strong>ornare:</strong>arcu cursus vitae congue mauris rhoncus aenean vel elit <a href="https://github.com">scelerisque</a></p>
 
     </body>
 </html>
