added finished project code

--- a/html-css/projects/project1.html
+++ b/html-css/projects/project1.html
@@ -22,7 +22,7 @@
         .lcol {
             border: 1px solid black;
             background-color: white;
-            width: 25%;
+            width: 30%;
             float: left;
             margin: 0;
         }
@@ -30,7 +30,7 @@
         .rcol {
             border: 1px solid black;
             background-color: white;
-            width: 75%;
+            width: 70%;
             float: right;
             margin: 0;
         }
@@ -40,6 +40,12 @@
             align-items: center;
             text-align: center;
             margin-bottom: 0;
+        }
+
+        p {
+            background-color: white;
+            margin-bottom: 10px;
+            margin: 10px;
         }
 
         h4 {
@@ -70,6 +76,12 @@
             margin: 30px;
         }
         h2 {
+            background-color: white;
+            margin: 10px;
+            margin-top: 40px;
+        }
+
+        h3 {
             background-color: white;
             margin: 10px;
         }
@@ -117,7 +129,23 @@
                 <div class="text"><img class="lcolimg" src="https://cdn-icons-png.flaticon.com/512/1384/1384014.png" alt="LinkedIn">yasser-alsilwadi</div>
             </div>
             <div class="rcol">
-                Hello from right
+                <h2>Profile</h2>
+                <hr>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem saepe aliquam modi illo accusantium expedita iure quidem iusto facilis assumenda vero quisquam sapiente at harum deleniti neque, sequi, sint magni?</p>
+                <h2>Work Experience</h2>
+                <hr>
+                <h3>Experience 1</h3>
+                <p>Date to Date</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eum rem tempore rerum unde, ipsa doloribus consequatur cupiditate aut reprehenderit modi? Repellat doloremque reprehenderit cupiditate deleniti eligendi ex rem error.</p>
+                <h3>Experience 2</h3>
+                <p>Date to Date</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eum rem tempore rerum unde, ipsa doloribus consequatur cupiditate aut reprehenderit modi? Repellat doloremque reprehenderit cupiditate deleniti eligendi ex rem error.</p>
+                <h3>Experience 3</h3>
+                <p>Date to Date</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eum rem tempore rerum unde, ipsa doloribus consequatur cupiditate aut reprehenderit modi? Repellat doloremque reprehenderit cupiditate deleniti eligendi ex rem error.</p>
+                <h2>Education</h2>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eum rem tempore rerum unde, ipsa doloribus consequatur cupiditate aut reprehenderit modi? Repellat doloremque reprehenderit cupiditate deleniti eligendi ex rem error.</p>
             </div>
 
     </main>
