--- a/html-css/bootstrap/example1.html
+++ b/html-css/bootstrap/example1.html
@@ -33,6 +33,8 @@
           <div class="col">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic perferendis unde, dignissimos et minus fuga veniam autem illum. Praesentium, quam quibusdam ex unde fuga voluptatem ab at alias inventore quo?
           </div>
+          <div class="col">
+          </div>
         </div>
     </div>
 
