--- a/html-css/bootstrap/example1.html
+++ b/html-css/bootstrap/example1.html
@@ -14,6 +14,10 @@
         .container {
             margin: 10px;
         }
+
+        h1{
+            margin-left: 20px;
+        }
         
     </style>
 </head>
@@ -21,7 +25,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
-
+    <h1>Header</h1>
+    
     <div class="container">
         <div class="row">
           <div class="col">
