made code changes for project

--- a/html-css/projects/html-css-final-project.html
+++ b/html-css/projects/html-css-final-project.html
@@ -94,15 +94,21 @@
         .imgrow {
             margin-top: 50px;
             margin-bottom: 50px;
-            display: flex;
+            /* display: flex;
+            justify-content: space-between; */
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
         }
 
         .imgrow img{
-            width: 33%;
+            width: 90%;
             height: auto;
         }
         hr{
             border: solid 1px black;
+        }
+        img {
+            border-radius: 15px;
         }
     </style>
 </head>
@@ -129,7 +135,7 @@
     <div class="imgrow">
         <img src="https://i.etsystatic.com/10331920/r/il/5c6528/1014801906/il_fullxfull.1014801906_sxx7.jpg" alt="">
         <img src="https://media.istockphoto.com/id/1204331594/photo/dramatic-sunset-downtown-chicago.jpg?s=612x612&w=0&k=20&c=mePcGRU-Zvns3USMZWkp8GdQcNmBATo1wMi5CILTKlc=" alt="">
-        <img src="https://media.timeout.com/images/103920824/750/422/image.jpg" alt="">
+        <img src="https://ak-d.tripcdn.com/images/01018120008wxiy3n05F0_C_800_600_R5.jpg_.webp?proc=autoorient" alt="">
     </div>
 
     <hr>
