added missing notes from class

--- a/javascript/dom/index.html
+++ b/javascript/dom/index.html
@@ -1,15 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dom</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DOM</title>
+    <style>
+      /* body {
+        background: burlywood;
+        color: purple;
+      } */
+      .mountain {
+        width: 120px;
+        height: auto;
+      }
+      form {
+        padding: 20px 0;
+      }
+      input,
+      button {
+        padding: 10px;
+        width: 50%;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>DOM tutorial</h1>
 
-    <h1>Dom</h1>
-    <script src="./dom.js"></script>
-    
-</body>
+    <div class="container" id="container">
+      <p class="child">Child 1</p>
+      <p class="child">Child 2</p>
+      <p class="child">Child 3</p>
+    </div>
+
+    <p>Some text outside container</p>
+
+    <!-- ---------- -->
+    <section class="images">
+      <img
+        src="https://cdn.britannica.com/67/19367-050-885866B4/Valley-Taurus-Mountains-Turkey.jpg"
+        alt="stock"
+        class="mountain"
+        id="img1"
+      />
+      <img
+        src="https://cdn.britannica.com/67/19367-050-885866B4/Valley-Taurus-Mountains-Turkey.jpg"
+        alt="stock"
+        class="mountain"
+        id="img2"
+      />
+      <img
+        src="https://cdn.britannica.com/67/19367-050-885866B4/Valley-Taurus-Mountains-Turkey.jpg"
+        alt="stock"
+        class="mountain"
+        id="img3"
+      />
+    </section>
+
+    <article class="blog blogs">
+      This is an example for className and classList
+    </article>
+
+    <form action="#" id="form">
+      <input type="text" class="customerName" id="customerName" />
+      <br />
+      <br />
+      <button class="btn">Submit</button>
+      <button class="btn2">Cancel</button>
+    </form>
+    <script src="dom.js"></script>
+  </body>
 </html>
