added pixel project code

--- a/javascript/projects/drawpixel/index.html
+++ b/javascript/projects/drawpixel/index.html
@@ -12,7 +12,7 @@
     <h1>DrawPixels</h1>
     <div>
       <button id='add-row'>Add a row</button>
-      <select>
+      <select id="colors">
         <option value="red">Red</option>
         <option value="orange">Orange</option>
         <option value="yellow">Yellow</option>
@@ -25,7 +25,7 @@
         <option value="brown">Brown</option>
       </select>
     </div>
-    <table>
+    <table id="pixelTable">
     </table>
   </body>
   <!-- loads our JavaScript file -->
